<resources>
    <string name="app_name">TouristsHelperApp</string>

    <string name="title_activity_gogle_login">GogleLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_">Welcome to our app</string>
    <string name="howdy_user_">Howdy user,</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_wit_otp">Sign In with OTP</string>

    <string name="favourites">Favourites</string>
    <string name="mumbai">Mumbai</string>
    <string name="state_mahar">State: Maharashtra</string>
    <string name="price_rs_49">Price: Rs. 4900/head</string>

    <string name="suggested_place">Suggested Places</string>
    <string name="profile">Profile</string>
    <string name="user_name">Ayushman Sharma</string>
    <string name="user_email">ayushman.ams999@gmail.com</string>
    <string name="user_interest">Travel Lover</string>
    <string name="user_age">Age: 20</string>
    <string name="user_gender">Sex: M</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="map">Maps</string>
    <string name="recent_loca">Recent Locations
    </string>
    <string name="mumbai_maha">Mumbai,Maharastra</string>
    <string name="login">Login</string>

    <string name="top_places">Top Places</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="all_cities">All Cities</string>

    <string name="title_activity_otp_authentication">activity_otp_authentication</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
   


</resources>
