<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/google_pixe"

    tools:context=".Google_Sign_in">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"

        android:paddingRight="20dp">

        <TextView
            android:id="@+id/welcome_to_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:gravity="top"

            android:text="@string/welcome_to_"
            android:textFontWeight="600"
            android:textAppearance="@style/welcome_to_"


            />

        <View
            android:id="@+id/ellipse_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="309dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/ellipse_4" />

        <View
            android:id="@+id/line_1"
            android:layout_width="350.02dp"
            android:layout_height="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="28.99dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/line_1" />


        <TextView
            android:id="@+id/howdy_user_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"

            android:layout_marginLeft="35dp"
            android:layout_marginTop="44dp"
            android:gravity="top"
            android:textFontWeight="800"
            android:text="@string/howdy_user_"
            android:textAppearance="@style/howdy_user_" />

        <ImageView
            android:layout_width="195dp"
            android:layout_height="150dp"
            android:layout_marginTop="64dp"
            android:layout_marginLeft="83dp"
            android:textAlignment="center"

            android:background="@drawable/undraw_travel_plans" />



        <Button
            android:id="@+id/google_signIn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="246dp"
            android:height="47dp"

            android:paddingLeft="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"

           android:layout_marginTop="83dp"
            android:background="@drawable/rectangle_2"
            android:drawableLeft="@drawable/google_icon_d"
            android:elevation="20dp"

            android:layout_marginRight="63dp"
            android:layout_marginLeft="63dp"

            android:text="@string/sign_in_with_google"
            android:textAppearance="@style/sign_in_with_google"

            />
        <Button
            android:id="@+id/otp_signIn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="246dp"
            android:height="47dp"
            android:paddingLeft="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/rectangle_3"
            android:drawableLeft="@drawable/numbers_icon"

            android:elevation="20dp"
            android:layout_marginLeft="63dp"
            android:layout_marginRight="63dp"
            android:text="@string/sign_in_wit_otp"
            android:textAppearance="@style/sign_in_with_otp"

            android:textColor="#ffffff" />



    </LinearLayout>

</RelativeLayout>